common-applications/test-environment/openeuler-cache-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-cache-proxy
  name: openeuler-cache-proxy
