common-applications/test-environment/openeuler-cache-proxy/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: openeuler-cache-proxy
spec:
  replicas: 0
  selector:
    matchLabels:
      app: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/cache-proxy-test:master-f4a661
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 5
        name: server
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - mountPath: /cache-proxy/config.py
          name: cache-proxy-secret
          subPath: config_py
        - mountPath: /var/log
          name: log-volume
      volumes:
      - name: cache-proxy-secret
        secret:
          secretName: cache-proxy-secret
          defaultMode: 256
      - name: log-volume
        persistentVolumeClaim:
          claimName: cache-proxy-data
