common-applications/test-environment/openeuler-cache-proxy/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: openeuler-cache-proxy
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: server
  type: ClusterIP
