common-applications/test-environment/openeuler-cache-proxy/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: server-ingress
  namespace: openeuler-cache-proxy
spec:
  rules:
  - host: cache-proxy.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: server-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - cache-proxy.test.osinfra.cn
    secretName: server-tls
